bug(toggle): Fix toggle layout to column on small devices

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -569,7 +569,28 @@ button {
 
 
 @media screen and (max-width: 720px) {
+  #footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100px;
+  }
+  #footer .footer-text {
+    width: 100%;
+  }
+
+  #footer .footer-text p {
+    padding-bottom: 0px;
+    line-height: 75px;
+    font-size: 16px;
+  }
   
+
+  #footer .switch {
+    display: flex;
+    position: relative;
+  }
+
 }
 
 @media screen and (max-width: 550px ) {
